--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,14 +1,17 @@
-.main {
+#main {
+	overflow: auto;
+	padding-bottom: 5%;
 	width: 40%;
-	text-align: left;
+	text-align: center;
 	margin-top: 0px;
 	position: relative;
 	bottom: 20%;
 	left: 30%;
-	padding-bottom: 10px;
 	right: 30%;
 	padding-top: 0px;
 }
+
+
 
 h2 {
 	text-align: center;
@@ -22,16 +25,12 @@ h2 {
 
 }
 
-.righty {
-	position: absolute;
-	right: 50px;
-	width: 200px;
-	text-align: center;
-	margin-bottom: 5%;
+.preview {
+	text-align: left;
 }
 
 p.2 {
-	padding-bottom: 10px;
+	padding-bottom: 1%;
 }
 
 figcaption {
