--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,35 +1,56 @@
+html, body {
+	height: 100%;
+}
+
 html {
 	background-color: #D6D6C2;
 
 }
 
 nav {
-	position: fixed;
-	top: 0px;
-	right: 0px;
+	position: relative;
 	width: 100%;
 	height: 4%;
-	padding-top: 10px;
-	padding-right: 25px;
-	word-spacing: 10px;
+	padding-top: .8em;
+	word-spacing: 1em;
 	text-align: right;
 	background-color: #fff;
-	border-bottom: 1px solid black;
+	border-bottom: .1em solid black;
+}
+
+#rightmore {
+	padding-right: 2%;
+}
+
+body {
+	margin: 0px;
 }
 
 .headerbar {
+	
 	width: 100%
 	top: 0px;
+	right: 2%;
 	height: 5%;
 	background-color: #fff;
 }
 
 
-header {
-	margin-top: 40px;
+#header {
+	position: relative;
+	top: 0px;
 	font-family: sans-serif;
 	font-size: 1em;
 	text-align: center;
+}
+
+.headme {
+	font-size: 1em;
+}
+
+#spacer {
+	clear: both;
+	padding-top: 1%;
 }
 
 .banner {
@@ -37,26 +58,46 @@ header {
 	height: 250px;
 }
 
-.topstyle {
-
-	top: 30px;
+#wrap {
+	min-height: 100%;
 }
 
-.headme {
-	font-size: 10px;
-}
-
-.main {
+#main {
+	overflow: auto;
+	padding-bottom: 5%;
 	width: 40%;
 	text-align: center;
 	margin-top: 0px;
 	position: relative;
 	bottom: 20%;
 	left: 35%;
-	padding-bottom: 10px;
 	right: 30%;
 	padding-top: 0px;
 }
+
+#footer {
+	position: relative;
+	margin-top: -5%;
+	height: 5%;
+	clear:both;
+	bottom: 2%;
+	width: 50%;
+	text-align: center;
+	padding-bottom: 5%;
+	left: 25%;
+}
+
+.footer:before {
+	margin-top: 10px;
+	position: relative;
+	width: 40%;
+	height: 2px;
+	color: gray;
+	bottom: 2%;
+	right: 30%;
+	clear: both;
+}
+
 
 .maintable{
 	border-spacing: 15px;
@@ -76,40 +117,23 @@ aside {
  	
 }
 
-.leftnav{
-	border-spacing: 17px;
-	
-}
 
 .righty {
-	position: absolute;
-	right: 50px;
-	width: 200px;
+	float: right;
+	right: 15%;
+	width: 20%;
 	text-align: center;
 	margin-bottom: 5%;
 }
 
-.footerline {
-	margin-top: 10px;
-	position: fixed;
-	width: 40%;
-	height: 2px;
-	color: gray;
-	bottom: 50px;
-	right: 30%;
-}
 
-footer {
-	position: fixed;
-	bottom: 15px;
-	width: 100%;
-	text-align: center;
-	
-
-}
 
 a:link {
   color: #3D3D29;
+}
+
+a:hover {
+	color: #99CCFF;
 }
 
 a:visited {
