--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -37,3 +37,12 @@ figcaption {
 	font-style: italic;
 	text-align: center;
 }
+
+pre {
+	text-align: left;
+	background: #f3f3f7;
+	border: solid 1px blue;
+	color: blue;
+	margin: 1.5%;
+	padding-top: 2%;
+}
