--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,160 +1,201 @@
-html, body {
-	height: 100%;
+
+* {
+	margin: 0;
+	padding: 0;
 }
 
-html {
-	background-color: #D6D6C2;
+img{
+	border: none;
+}
+
+.background{
+	background-position:left top;
+	background-repeat:repeat;
 
 }
 
-nav {
-	position: relative;
+body{
+	font-family: Verdana, Arial, sans-serif;
+	font-size: .8em;
+}
+
+header h1, nav, nav li{
+	display: inline-block;
+}
+
+header{
+	background-color: white;
+	height: 4em;
 	width: 100%;
-	height: 4%;
-	padding-top: .8em;
-	word-spacing: 1em;
-	text-align: right;
-	background-color: #fff;
-	border-bottom: .1em solid black;
-}
-
-
-
-#rightmore {
-	padding-right: 2%;
-}
-
-body {
-	margin: 0px;
-}
-
-.headerbar {
-	
-	width: 100%
-	top: 0px;
-	right: 2%;
-	height: 5%;
-	background-color: #fff;
-}
-
-
-#header {
 	position: relative;
-	top: 0px;
-	font-family: sans-serif;
+	top: 0;
+	right: 0;
+	left: 0;
+	box-shadow: 0px 0px .1em;
+	border-bottom: 0px solid #C10021;
+}
+header h1 a{
+	font-family: Verdana, Arial, sans-serif;
+	color: black;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: normal;
 	font-size: 1em;
-	text-align: center;
+	position:absolute;
+	top: 12%;
+	left: 2.5%;
 }
 
-.headme {
-	font-size: 1em;
-}
-
-#spacer {
-	clear: both;
+nav{
+	float: right;
 	padding-top: 1%;
+	left: 12.5%;
+	width: 100%;
+	text-align: right;
+}
+nav li a{
+	color: black;
+	text-decoration: none;
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 1.1em;
+	margin-right: 1em;
+	padding: .3em;
 }
 
-.banner {
-	width: auto;
-	height: 250px;
+nav li a:hover{
+	background-color: #F0F7FF;
+	border-radius: 3px;
 }
 
-#wrap {
-	min-height: 100%;
+#banner{
+	height: 5%;
+	background-color: #dbdbdb;
+	border-bottom: 1px solid #c3c3c3;
+}
+
+#title{
+	position: relative;
+	left: 20%;
+	width: 50%;
+	padding-top: 1.5%;
+	margin: 0 1% 2.5% 0;
+	text-align: center;
+
+}
+
+#title p{
+	text-align: center;
+	font-size: 1.5em;
+	margin-top: 2.5%;
+}
+section{
+	
+	width: 100%;
+	
+}
+
+#wrapme {
+	padding-left: 20%;
 }
 
 #main {
-	overflow: auto;
+	position: relative;
+	
 	padding-bottom: 5%;
-	width: 40%;
-	text-align: center;
+	width: 100%;
+	text-align: left;
 	margin-top: 0px;
-	position: relative;
+	
 	bottom: 20%;
-	left: 35%;
-	right: 30%;
-	padding-top: 0px;
+	padding-top: 2em;
+
 }
 
-#footer {
+
+#index {
 	position: relative;
-	margin-top: -5%;
-	height: 5%;
-	clear:both;
-	bottom: 2%;
-	width: 50%;
+	width: 20%;
+	margin-right: 2.5%;
+	display: inline-block;
+	vertical-align: top;
+	border: 1px solid #c8c8c8;
+	margin-bottom: 2.5em;
+	padding: .8em;
+	border-radius: .2em;
+	box-shadow: 0 .1em .15em #ccc;
+	background-color: white;
+	*display:inline;
+}
+
+article h1 {
 	text-align: center;
-	padding-bottom: 5%;
-	left: 25%;
+	padding-bottom: 3%;
 }
 
-.footer:before {
-	margin-top: 10px;
-	position: relative;
-	width: 40%;
-	height: 2px;
-	color: gray;
-	bottom: 2%;
-	right: 30%;
-	clear: both;
+article p{
+	margin-bottom: .7em;
 }
 
-
-.maintable{
-	border-spacing: 15px;
+.rightcol {
+	margin-right: 0;
 }
 
-.downsize {
-	padding-top: 10px;
+.downsize img {
+	
+	padding-top: 1em;
 	height: 100px;
 	width: auto;
 }
 
-aside {
-	position: fixed;
-	top: 200px;
-	left: 35px;
-	width: 150px;
- 	
+#centerMe {
+	margin-left: 31%;
+	padding-bottom: 3%;
 }
 
-aside a {
+.readmore{
+	background-color: black;
+	padding: .4em 1em;
+	color: white;
 	text-decoration: none;
+	border-radius: 3px;
+	display: inline-block;
+}
+.readmore:hover{
+	background-color: #383838;
+}
+
+#aboutpic {
+	margin-left: 42%;
+	padding-top: 5%;
 }
 
 
-.righty {
-	float: right;
-	right: 15%;
-	width: 20%;
+#footer {
+	position: relative;
+	overflow: auto;
+	width: 50%;
+	left: 25%;
 	text-align: center;
-	margin-bottom: 5%;
+	margin-top: 1.5%;
+	margin-bottom: 1.5%;
+}
+
+#footer p {
+	margin-top: 2%;
+}
+
+#footer a {
+	margin-right: 2%;
 }
 
 #contact {
 	list-style-type: none;
-	text-align: center;
-	margin-bottom: 1em;
+	
 }
 
 #contact li {
-	margin-bottom: 1em;
-	font-family: ;
-	padding-right: 5%;
-}
-
-
-
-
-a:link {
-  color: #3D3D29;
-}
-
-a:hover {
-	color: #99CCFF;
-}
-
-a:visited {
- color: #52A3CC;
+	position: relative;
+	left: 10%;
+	font-size: 1.5em;
+	margin-bottom: 2%;
 }
