--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -17,6 +17,7 @@ img{
 body{
 	font-family: Verdana, Arial, sans-serif;
 	font-size: .8em;
+	background-color: #DCD2D2;
 }
 
 header h1, nav, nav li{
@@ -24,7 +25,7 @@ header h1, nav, nav li{
 }
 
 header{
-	background-color: white;
+	background-color: #3399FF;
 	height: 4em;
 	width: 100%;
 	position: relative;
@@ -36,7 +37,7 @@ header{
 }
 header h1 a{
 	font-family: Verdana, Arial, sans-serif;
-	color: black;
+	color: white;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-weight: normal;
@@ -54,7 +55,7 @@ nav{
 	text-align: right;
 }
 nav li a{
-	color: black;
+	color: white;
 	text-decoration: none;
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 1.1em;
@@ -63,14 +64,17 @@ nav li a{
 }
 
 nav li a:hover{
-	background-color: #F0F7FF;
+	background-color: #99CCFF;
 	border-radius: 3px;
 }
 
+
 #banner{
-	height: 5%;
-	background-color: #dbdbdb;
-	border-bottom: 1px solid #c3c3c3;
+	margin-top: 2.5%;
+	
+	left: 50%;
+	/*background-color: #dbdbdb;*/
+	/*border-bottom: 1px solid #c3c3c3;*/
 }
 
 #title{
@@ -198,4 +202,43 @@ article p{
 	left: 10%;
 	font-size: 1.5em;
 	margin-bottom: 2%;
+}
+
+
+#projectPosts {
+	margin-top: 4em;
+	margin-left: 5%;
+	float: left;
+	width: 100%;
+}
+
+#projectLeft {
+
+	display: inline-block;
+	/*clear: left;*/
+	width: 40%;
+	height: 100%;
+	vertical-align: top;
+	border: 1px solid #c8c8c8;
+	margin-right: 2.5%;
+	margin-bottom: 2.5em;
+	padding: .8em;
+	border-radius: .2em;
+	box-shadow: 0 .1em .15em #ccc;
+	background-color: white;
+}
+
+#projectRight {
+	display: inline-block;
+	/*clear: left;*/
+	width: 40%;
+	height: 100%;
+	vertical-align: top;
+	border: 1px solid #c8c8c8;
+	margin-right: 2.5%;
+	margin-bottom: 2.5em;
+	padding: .8em;
+	border-radius: .2em;
+	box-shadow: 0 .1em .15em #ccc;
+	background-color: white;
 }
