Add 8.7 Cheat Sheet

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -160,7 +160,7 @@ figcaption {
 pre {
 	text-align: left;
 	background: #f3f3f7;
-	border: solid 1px blue;
+	border: solid 1px black;
 	color: blue;
 	margin: 1.5%;
 	padding-top: 2%;
