--- a/stylesheets/cheat-sheet.css
+++ b/stylesheets/cheat-sheet.css
@@ -18,6 +18,7 @@ pre[class*="language-"] {
 	margin: .8em 0;
 	overflow: auto;
 	border-radius: 0.4em;
+	background: #272822;
 }
 
 
@@ -25,6 +26,7 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"] {
 	padding: .1em;
 	border-radius: .3em;
+	background: #272822;
 }
 
 #source {
